--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <link rel="canonical" href="http://www.datasciencetweetsoftheday.ml/" />
 <meta property="og:url" content="http://www.datasciencetweetsoftheday.ml/" />
 <meta property="og:site_name" content="Data Science Tweets of the Day" />
+<meta property="og:image" content="http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png" />
 <link rel="next" href="http://www.datasciencetweetsoftheday.ml/page/2/" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@ceshine_en" />
 <meta name="twitter:creator" content="@ceshine_en" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Data Science Tweets of the Day","url":"http://www.datasciencetweetsoftheday.ml/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"name":"Data Science Tweets of the Day - Twitter Sanity Preserver","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
+{"@type":"WebSite","headline":"Data Science Tweets of the Day","url":"http://www.datasciencetweetsoftheday.ml/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"image":{"twitter":"/public/dstotd-wide.png","facebook":"/public/dstotd-wide.png","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png","@type":"imageObject"},"name":"Data Science Tweets of the Day - Twitter Sanity Preserver","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <link rel="stylesheet" href="/assets/css/style.css?v=fceb1758ae2c3e9ce8c899bed7e70ea903ce6740">
