--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <link rel="canonical" href="http://www.datasciencetweetsoftheday.ml/" />
 <meta property="og:url" content="http://www.datasciencetweetsoftheday.ml/" />
 <meta property="og:site_name" content="Data Science Tweets of the Day" />
-<meta property="og:image" content="http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png" />
+<meta property="og:image" content="http://www.datasciencetweetsoftheday.ml/public/dstotd-twitter.png" />
 <link rel="next" href="http://www.datasciencetweetsoftheday.ml/page/2/" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@ceshine_en" />
 <meta name="twitter:creator" content="@ceshine_en" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"Data Science Tweets of the Day","url":"http://www.datasciencetweetsoftheday.ml/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"image":{"twitter":"/public/dstotd-twitter.png","facebook":"/public/dstotd-wide.png","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png","@type":"imageObject"},"name":"Data Science Tweets of the Day - Twitter Sanity Preserver","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
+{"@type":"WebSite","headline":"Data Science Tweets of the Day","url":"http://www.datasciencetweetsoftheday.ml/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"image":"http://www.datasciencetweetsoftheday.ml/public/dstotd-twitter.png","name":"Data Science Tweets of the Day - Twitter Sanity Preserver","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/assets/css/style.css?v=b0b4a7c6113636d0fb809d43a762d4074d24b57a">
+    <link rel="stylesheet" href="/assets/css/style.css?v=4aaf1dad017dce170b3bb4b745d97a1541746cab">
     <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
     <!--[if lt IE 9]>
