Add links to the archives

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ seo:
 </div>
 {% endif %}
 
+<div class="next-prev">
+    <p>Or check the <a href="{{ site.baseurl }}/archive/">archives</a></p>
+</div>
+
 <!-- <div class="next-prev">
     <p>Or check the <a href="{{ site.baseurl }}/archive/">archives</a></p>
 </div> -->
