Pretty link doesn't work on Github Page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ seo:
 {% endif %}
 
 <div class="next-prev">
-    <p>Or check the <a href="{{ site.baseurl }}/archive/">archives</a></p>
+    <p>Or check the <a href="{{ site.baseurl }}/archive.html">archives</a></p>
 </div>
 
 <!-- <div class="next-prev">
