--- a/archive.html
+++ b/archive.html
@@ -47,7 +47,7 @@
         <span id="logo"></span>
 
         <a href="" class="button fork"><strong>View On GitHub</strong></a>
-        <a href="/archive/" class="button fork archive-button"><strong>View Archives</strong></a>
+        <a href="/archive.html" class="button fork archive-button"><strong>View Archives</strong></a>
         
       </div><!-- end banner -->
 
