--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
 <meta name="twitter:site" content="@ceshine_en" />
 <meta name="twitter:creator" content="@ceshine_en" />
 <script type="application/ld+json">
-{"@type":"WebPage","image":"https://www.datasciencetweetsoftheday.ml/public/dstotd-twitter.png","url":"https://www.datasciencetweetsoftheday.ml/search.html","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","headline":"Data Science Tweets of the Day - Search","@context":"http://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"@type":"WebPage","headline":"Data Science Tweets of the Day - Search","url":"https://www.datasciencetweetsoftheday.ml/search.html","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","image":"https://www.datasciencetweetsoftheday.ml/public/dstotd-twitter.png","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <link rel="stylesheet" href="/assets/css/style.css?v=">
