--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
 <meta name="twitter:site" content="@ceshine_en" />
 <meta name="twitter:creator" content="@ceshine_en" />
 <script type="application/ld+json">
-{"author":{"@type":"Person","name":"Ceshine Lee"},"@type":"WebPage","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"url":"https://www.datasciencetweetsoftheday.ml/search.html","image":"https://www.datasciencetweetsoftheday.ml/publis/dstotd-wide.png","headline":"Data Science Tweets of the Day - Search","description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
+{"headline":"Data Science Tweets of the Day - Search","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.datasciencetweetsoftheday.ml/public/dstotd-wide.png"},"name":"Ceshine Lee"},"@type":"WebPage","url":"https://www.datasciencetweetsoftheday.ml/search.html","image":"https://www.datasciencetweetsoftheday.ml/publis/dstotd-wide.png","author":{"@type":"Person","name":"Ceshine Lee"},"description":"Curated by @ceshine_en. Inpired by @WTFJHT.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <meta name="twitter:image" content="https://www.datasciencetweetsoftheday.ml/public/dstotd-square.png" />
